# NEW_NEO

./: README.md
backup_QBO_libs/qbo_arduqbo/: BaseStopRequest.h  BaseStopResponse.h  BatteryLevel.h  Irs.h  LCD.h  Mouth.h  NoiseLevels.h  Nose.h  TestRequest.h  TestResponse.h  TorqueEnableRequest.h  TorqueEnableResponse.h  motor_state.h
qbo_arduqbo/: default_with_sensors_dynamixel.yaml
qbo_arduqbo/launch/: qbo_dynamixel_with_sensors.launch
qbo_arduqbo/src/: qbo_arduqbo.cpp
qbo_arduqbo/src/controllers/: infra_red_recievers_controller.cpp
qbo_bringup/qbo_bringup/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
qbo_bringup/qbo_bringup/launch/: 3dsensor.launch~  3dsensor1.launch~  depth_image.launch~  minimal.launch  minimal.launch~  minimal_with_razorImu.launch  recognition.launch~  robot_pose_ekf.launch~
qbo_bringup/qbo_bringup/launch/includes/: 3dmap.launch  3dmap.launch~  3dsensor.launch  3dsensor.launch~  depth_image.launch  kinect.launch  robot_pose_ekf.launch  robot_pose_ekf.launch~
qbo_bringup/qbo_bringup/param/: Nouveau document  depth_1208250144.yaml  diagnostics.yaml~  rgb_1208250144.yaml
qbo_bringup/qbo_bringup/param/defaults/: smoother.yaml
qbo_description/: CMakeLists.txt  package.xml  package.xml~
qbo_description/launch/: jarvis_sensors.rviz  setup_rviz.rviz  test.launch~
qbo_description/meshes/: body.dae~  front_wheel.dae~  l_wheel.dae~
qbo_description/meshes/qbo/: body.dae~  body.stl  front_wheel.stl  head.stl  l_wheel.stl  left_wheel.dae~  qbo_stock.dae  r_wheel.stl
qbo_description/meshes/qbo/format dae/: body.dae  body1.dae  front_wheel1.dae  head1.dae  l_wheel.dae  l_wheel1.dae  r_wheel1.dae
qbo_description/robot/: qbo.urdf.xacro  qbo.urdf.xacro~
qbo_description/urdf/: asus_xtion_pro.urdf.xacro  asus_xtion_pro.urdf.xacro~  base.urdf.xacro  base.urdf.xacro~  camera.urdf.xacro  camera.urdf.xacro~  common.xacro  common.xacro~  qbo_jarvis.urdf.xacro~  sensors.urdf.xacro  sensors.urdf.xacro~
qbo_launcher/: qbo_start_service
qbo_launcher/launch/: qbo_startup.launch
