<?xml version="1.0"?>
<package>
  <name>qbo_bringup</name>
  <version>0.1.3</version>
  <description>The qbo_bringup package</description>

  <maintainer email="sylvain-zwolinski@orange.fr">jarvis</maintainer>

  <license>BSD</license>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>openni_launch</build_depend>
  <build_depend>qbo_description</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  
  <run_depend>openni_launch</run_depend>
  <run_depend>qbo_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
